Fixes in managing collections of enums